--- a/src/main/resources/IIT/PP2/CW2/FXML/JobRoleDetailsUI.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/JobRoleDetailsUI.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -19,11 +18,12 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TableView layoutX="34.0" layoutY="100.0" prefHeight="200.0" prefWidth="533.0">
+      <TableView fx:id="tableView_jobRoleDetails" layoutX="34.0" layoutY="100.0" prefHeight="200.0" prefWidth="533.0">
          <columns>
-            <TableColumn prefWidth="40.0" text="ID" />
-            <TableColumn prefWidth="382.0" text="Job Role" />
-            <TableColumn prefWidth="110.0" text="Hourly Pay" />
+            <TableColumn fx:id="tableCell_jobRoleDefaultId" prefWidth="40.0" text="Default ID" visible="false" />
+            <TableColumn fx:id="tableCell_jobRoleId" prefWidth="40.0" text="ID" />
+            <TableColumn fx:id="tableCell_jobRoleName" prefWidth="382.0" text="Job Role Name" />
+            <TableColumn fx:id="tableCell_jobRoleHourlyPay" prefWidth="110.0" text="Hourly Pay" />
          </columns>
       </TableView>
       <HBox alignment="CENTER" layoutX="35.0" layoutY="14.0" prefHeight="45.0" prefWidth="531.0" spacing="20.0">
@@ -57,25 +57,24 @@
          <children>
             <HBox alignment="CENTER" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
                <children>
-                  <Label text="Name" />
-                  <TextField prefHeight="25.0" prefWidth="214.0" promptText="Name" />
+                  <Label text="Job Role Name" />
+                  <TextField fx:id="txt_name" prefHeight="25.0" prefWidth="175.0" promptText="Job Role Name" />
                </children>
             </HBox>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
                <children>
-                  <Label text="Date of Birth" />
-                  <DatePicker promptText="Date of Birth" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
-               <children>
-                  <Label text="Contact Number" />
-                  <TextField prefHeight="25.0" prefWidth="155.0" promptText="Contact Number" />
+                  <Label text="Hourly Pay" />
+                  <TextField fx:id="txt_hourlyPay" prefHeight="25.0" prefWidth="202.0" promptText="Hourly Pay" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="40.0" prefWidth="290.0" spacing="10.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#saveJobRoleDetails" text="Insert">
+                  <Button mnemonicParsing="false" onAction="#insertJobRoleDetails" text="Insert">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#viewJobRoleDetails" text="View">
                      <font>
                         <Font name="System Italic" size="12.0" />
                      </font>
