--- a/src/main/resources/IIT/PP2/CW2/FXML/ContractDetailsUI.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/ContractDetailsUI.fxml
@@ -23,12 +23,13 @@
       <TableView fx:id="tableView_contractDetails" layoutX="17.0" layoutY="100.0" prefHeight="200.0" prefWidth="566.0">
         <columns>
             <TableColumn fx:id="tableCell_contractDefaultId" prefWidth="40.0" text="Default ID" visible="false" />
-          <TableColumn fx:id="tableCell_contractId" prefWidth="40.0" text="ID" />
-          <TableColumn fx:id="tableCell_contractName" prefWidth="98.0" text="Name" />
-            <TableColumn fx:id="tableCell_contractDescription" prefWidth="149.0" text="Description" />
-            <TableColumn fx:id="tableCell_contractCreationDate" prefWidth="94.66665649414062" text="Creation Date" />
-            <TableColumn fx:id="tableCell_contractJobType" prefWidth="89.33334350585938" text="Job Type" />
-            <TableColumn fx:id="tableCell_contractProjectLeader" prefWidth="94.0" text="Project Leader" />
+          <TableColumn fx:id="tableCell_contractId" prefWidth="26.666667938232422" text="ID" />
+          <TableColumn fx:id="tableCell_contractName" prefWidth="92.0" text="Name" />
+            <TableColumn fx:id="tableCell_contractDescription" prefWidth="82.66667175292969" text="Description" />
+            <TableColumn fx:id="tableCell_contractCreationDate" prefWidth="101.66665649414062" text="Creation Date" />
+            <TableColumn fx:id="tableCell_contractJobType" prefWidth="78.0" text="Job Type" />
+            <TableColumn fx:id="tableCell_contractProjectLeader" prefWidth="100.99996948242188" text="Project Leader" />
+            <TableColumn fx:id="tableCell_contractCustomer" prefWidth="82.0" text="Customer" />
         </columns>
       </TableView>
       <HBox alignment="CENTER" layoutX="45.0" layoutY="24.0" prefHeight="45.0" prefWidth="531.0" spacing="20.0">
@@ -84,6 +85,12 @@
                <children>
                   <Label text="Project Leader" />
                   <TextField fx:id="txt_projectLeader" prefHeight="25.0" prefWidth="174.0" promptText="Project Leader" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="170.0" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
+               <children>
+                  <Label text="Customer" />
+                  <TextField fx:id="txt_customer" prefHeight="25.0" prefWidth="198.0" promptText="Customer" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="40.0" prefWidth="290.0" spacing="10.0">
