--- a/src/main/resources/IIT/PP2/CW2/FXML/EmployeeDetailsUI.fxml
+++ b/src/main/resources/IIT/PP2/CW2/FXML/EmployeeDetailsUI.fxml
@@ -82,6 +82,18 @@
                   <TextField fx:id="txt_contactNumber" prefHeight="25.0" prefWidth="155.0" promptText="Contact Number" />
                </children>
             </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="90.0" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
+               <children>
+                  <Label text="Job Role" />
+                  <TextField fx:id="txt_jobRole" prefHeight="25.0" prefWidth="202.0" promptText="Job Role" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="130.0" prefHeight="40.0" prefWidth="290.0" spacing="20.0">
+               <children>
+                  <Label text="Salary" />
+                  <TextField fx:id="txt_salary" prefHeight="25.0" prefWidth="202.0" promptText="Salary" />
+               </children>
+            </HBox>
             <HBox alignment="CENTER" layoutX="10.0" layoutY="90.0" prefHeight="40.0" prefWidth="290.0" spacing="10.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#insertEmployeeDetails" text="Insert">
